centered NHS logo in header and fixed spacing for the page title

--- a/assets/scss/app/header.scss
+++ b/assets/scss/app/header.scss
@@ -11,9 +11,12 @@
 	border-bottom: 2px solid $dark-blue;
 	padding: 0;
 	height: 100px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 }
 
-.global-header__link 	{
+.global-header__link {
 }
 
 $height: 64px;
